Bug 389108 - number of updates available and selected don't match
Summary: number of updates available and selected don't match
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: Updates (other bugs)
Version First Reported In: 5.11.95
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
: 389171 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-01-17 13:27 UTC by Patrick Silva
Modified: 2018-05-02 14:58 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (122.44 KB, image/png)
2018-01-17 13:27 UTC, Patrick Silva
Details
discover on neon dev unstable (151.30 KB, image/png)
2018-03-22 20:59 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2018-01-17 13:27:21 UTC
Created attachment 109933 [details]
screenshot

Testing plasma 5.12 beta on Arch Linux...
See the screenshot.
Comment 1 Aleix Pol 2018-01-17 13:43:18 UTC
Can you reproduce every time?
Do you know which backends you have loaded?

If you can reproduce, try running with --backends packagekit-backend
Comment 2 Patrick Silva 2018-01-18 18:11:29 UTC
*** Bug 389171 has been marked as a duplicate of this bug. ***
Comment 3 Richard Ullger 2018-01-18 21:18:28 UTC
(In reply to Aleix Pol from comment #1)
> Can you reproduce every time?
> Do you know which backends you have loaded?
> 
> If you can reproduce, try running with --backends packagekit-backend

This can be reproduced but it is dependent on discover displaying an Arch package as more than one element in the list of updates. Take a look at the description of bug 389171.

This is using the packagekit backend required to manage packages from Arch Linux.
Comment 4 Aleix Pol 2018-01-19 21:21:55 UTC
@Richard, are you on 5.12? The behavior you are describing should have changed there.
Comment 5 Patrick Silva 2018-01-19 21:26:26 UTC
The problem described here happened again today.
It does not occur always.
I don't know which backends are loaded.
Comment 6 Richard Ullger 2018-01-19 23:24:49 UTC
(In reply to Aleix Pol from comment #4)
> @Richard, are you on 5.12? The behavior you are describing should have
> changed there.

5.11.5 which is the latest version in Arch.
Comment 7 Aleix Pol 2018-01-29 16:36:20 UTC
Git commit 1305ba643f6c50cc5404914c0a7cfb63f24e70b4 by Aleix Pol.
Committed on 29/01/2018 at 16:34.
Pushed by apol into branch 'Plasma/5.12'.

Package names into appstream resources before showing an update count

M  +5    -5    libdiscover/backends/PackageKitBackend/PackageKitBackend.cpp
M  +2    -2    libdiscover/backends/PackageKitBackend/PackageKitBackend.h

https://commits.kde.org/discover/1305ba643f6c50cc5404914c0a7cfb63f24e70b4
Comment 8 Patrick Silva 2018-03-22 20:59:35 UTC
Created attachment 111562 [details]
discover on neon dev unstable

just happened again on neon dev unstable: 58 updates available, 60 selected.
Comment 9 Aleix Pol 2018-05-02 14:58:30 UTC
Git commit 2fc8f0c31e764693396d2fe4e764e4b8c7c14cd1 by Aleix Pol.
Committed on 02/05/2018 at 14:56.
Pushed by apol into branch 'Plasma/5.12'.

De-duplicate redundant updates

Count packages, not resources.

M  +0    -1    libdiscover/UpdateModel/UpdateModel.cpp
M  +11   -1    libdiscover/backends/PackageKitBackend/PackageKitBackend.cpp

https://commits.kde.org/discover/2fc8f0c31e764693396d2fe4e764e4b8c7c14cd1