Package names into appstream resources before showing an update count

BUG: 389108